tests/paczka1/small_fuzzy/22748558.err
Error in line 11: rj5 S315 -2,4
Error in line 10: rj5 S315 54,6
